# diffbutnice_website

./: .gitignore  CNAME  README.md  build_site.py  comics.js  comics.yaml  index.html  now.html  now.json  now.md  projects.html  style.css
.github/workflows/: deploy.yml
_layouts/: now-layout.html
alt_text_helper/: README.md  alt_text_generator.py  pyproject.toml
alt_text_helper/alt_text_helper.egg-info/: PKG-INFO  SOURCES.txt
now/: index.html
site/: style.css
site/.trash/: archive.html  base.html  comic.html  dentist.html  falsies.html  index_content.html  leftovers.html  smells.html
