[project]
name = "alt-text-helper"
version = "0.1.0"
description = "Automatically generate alt text for comic images using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"